log/build_2024-04-22_12-27-20/uav_urdf_demo/stdout_stderr.log
[35m[1mScanning dependencies of target state_publisher[0m
[ 50%] [32mBuilding CXX object CMakeFiles/state_publisher.dir/src/state_publisher.cpp.o[0m
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:66:2: error: expected ‘;’ after class definition
   66 | }
      |  ^
      |  ;
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp: In constructor ‘StatePublisher::StatePublisher()’:
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:53:41: error: unable to find numeric literal operator ‘operator""ms’
   53 |         timer = this->create_wall_timer(30ms, timer_callback);
      |                                         ^~~~
make[2]: *** [CMakeFiles/state_publisher.dir/build.make:63: CMakeFiles/state_publisher.dir/src/state_publisher.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/state_publisher.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
